# kodegen-candle-agent

./: Cargo.toml  README.md
examples/: candle_agent_demo.rs
examples/common/: mod.rs
src/: async_stream.rs  lib.rs  main.rs
src/builders/: agent_builder.rs  embedding.rs  extractor.rs  mod.rs
src/builders/agent_role/: agent_builder.rs  helpers.rs  mod.rs  role_builder.rs  role_builder_impl.rs  traits.rs
src/builders/agent_role/chat/: memory_ops.rs
src/builders/completion/: completion_request_builder.rs
src/builders/document/: loaders.rs
src/builders/image/: builder_impl.rs
src/builders/vision/: mod.rs  traits.rs  vision_builder.rs
src/capability/registry/: api.rs  enums.rs  mod.rs  runtime.rs  storage.rs  text_embedding.rs  text_to_text.rs
src/capability/registry/pool/: mod.rs
src/capability/registry/pool/capabilities/: text_embedding.rs
src/capability/registry/pool/core/: memory_governor.rs  worker_state.rs
src/capability/text_embedding/: mod.rs  safetensors_validation.rs
src/capability/text_embedding/stella/: instruction.rs  loaded.rs  mod.rs  utils.rs
src/capability/text_to_image/stable_diffusion_35_turbo/: clip_g_tokenizer.rs  clip_l_tokenizer.rs  t5_config.rs  t5_tokenizer.rs
src/capability/text_to_text/: mod.rs  qwen3_quantized.rs
src/cli/: config.rs  handler.rs  mod.rs  runner.rs
src/context/extraction/: error.rs  mod.rs
src/core/: mod.rs  model_config.rs  simd_adapters.rs
src/core/generation/: config.rs  generator.rs  stats.rs  tokens.rs  types.rs
src/core/tokenizer/: core.rs
src/domain/: embedding_result.rs  mod.rs
src/domain/agent/: core.rs  role.rs  types.rs
src/domain/chat/: loop.rs  orchestration.rs  session.rs
src/domain/chat/commands/: execution.rs
src/domain/chat/commands/types/: action_executor_impls.rs  command_results.rs  core_executor_impls.rs  data_executor_impls.rs  workflow_executor_impls.rs
src/domain/chat/config/: manager.rs
src/domain/chat/message/: message_processing.rs  mod.rs
src/domain/chat/realtime/: mod.rs  system.rs  typing.rs
src/domain/chat/search/: algorithms.rs  export.rs  mod.rs
src/domain/chat/search/manager/: mod.rs
src/domain/chat/templates/parser/: mod.rs
src/domain/completion/: mod.rs  prompt_formatter.rs  request.rs  tool_formatter.rs  tool_parser.rs  types.rs
src/domain/context/: traits.rs
src/domain/context/provider/: context_impl.rs
src/domain/error/: breaker.rs
src/domain/memory/: mod.rs  ops.rs  tool.rs
src/domain/memory/cognitive/types/: processor.rs  quantum.rs  state.rs
src/domain/memory/primitives/: types.rs
src/domain/memory/primitives/node/: node_core.rs  node_relationships.rs  stats.rs
src/domain/model/: error.rs  mod.rs
src/domain/tool/: mod.rs  router.rs  selector.rs
src/memory/: mod.rs
src/memory/api/: handlers.rs  models.rs  routes.rs
src/memory/cognitive/committee/: committee_evaluators.rs  committee_types.rs
src/memory/cognitive/quantum/: router.rs
src/memory/core/: mod.rs
src/memory/core/cognitive_worker/: committee_evaluation.rs  entanglement_discovery.rs  temporal_maintenance.rs
src/memory/core/decay_worker/: worker.rs
src/memory/core/manager/: mod.rs  pool.rs
src/memory/core/manager/coordinator/: conversions.rs  lifecycle.rs  operations.rs  search.rs  temporal.rs  trait_impl.rs
src/memory/core/manager/surreal/: futures.rs  manager.rs  operations.rs  queries.rs  trait_def.rs  types.rs
src/memory/core/ops/: evolution.rs  filter.rs  repository.rs
src/memory/core/ops/retrieval/: temporal.rs
src/memory/core/primitives/: metadata.rs  node.rs  relationship.rs  types.rs
src/memory/core/systems/: episodic.rs  history.rs  procedural.rs
src/memory/graph/entity/: repository.rs  surreal.rs  types.rs
src/memory/migration/: converter.rs  schema_migrations.rs
src/memory/monitoring/: metrics.rs  mod.rs
src/memory/schema/: memory_schema.rs  quantum_schema.rs  relationship_schema.rs
src/memory/transaction/: mod.rs  transaction_manager.rs
src/memory/utils/: mod.rs
src/memory/vector/: in_memory.rs  multimodal_service.rs  vector_index.rs  vector_repository.rs  vector_store.rs
src/memory/vector/vector_search/: options.rs  types.rs
src/tools/: check_memorize_status.rs  list_memory_libraries.rs  memorize.rs  memorize_manager.rs  mod.rs  recall.rs
src/util/: input_resolver.rs  json_util.rs
src/workflow/: core.rs  macros.rs  ops.rs  parallel.rs
tests/: builders.rs  capability.rs  cli.rs  cli_args.rs  cli_completion.rs  cli_config.rs  cli_prompt.rs  context.rs  core.rs  domain.rs  domain_context_extraction_error.rs  domain_util_notnan.rs  domain_voice_audio.rs  domain_voice_mod.rs  domain_voice_transcription.rs  integration_generation_pipeline.rs  memory.rs  simd_thread_safety.rs  test_duplicate_content_hash.rs  test_lib.rs  util.rs  workflow.rs
tests/builders/: test_embedding.rs  test_vision.rs
tests/capability/: test_registry.rs  test_stella_instruction.rs
tests/cli/: test_handler.rs
tests/context/: test_extraction_error.rs
tests/core/: test_model_config.rs  test_simd_adapters.rs
tests/core/generation/: test_config.rs  test_stats.rs  test_tokens.rs  test_types.rs
tests/core/tokenizer/: test_core.rs
tests/domain/chat/: test_loop.rs  test_orchestration.rs
tests/domain/chat/message/: test_message_processing.rs  test_mod.rs
tests/domain/chat/templates/parser/: test_mod.rs
tests/domain/model/: test_error.rs
tests/domain/util/: test_json_util.rs
tests/memory/: cognitive_integration_tests.rs
tests/memory/core/: test_schema.rs
tests/memory/migration/: test_converter.rs
tests/memory/monitoring/: test_metrics.rs  test_metrics_test.rs  test_metrics_tests.rs
tests/memory/schema/: test_relationship_schema.rs
tests/memory/vector/: test_vector_index.rs  test_vector_repository.rs
tests/util/: test_input_resolver.rs  test_json_util.rs
tests/workflow/: test_parallel.rs
