[package]
name = "kodegen_candle_agent"
version = "0.1.0"
edition = "2024"
description = "KODEGEN.ᴀɪ: Memory-efficient, Blazing-Fast, MCP tools for code generation agents."
authors = ["KODEGEN.ᴀɪ"]
homepage = "https://kodegen.ai"
repository = "https://github.com/cyrup-ai/kodegen-candle-agent"
readme = "README.md"
categories = ["development-tools", "command-line-utilities", "api-bindings"]
keywords = [
    "mcp",
    "terminal",
    "agent",
    "filesystem",
    "claude"
]
license = "Apache-2.0 OR MIT"

[dependencies]

bitflags = { version = "2", features = ["serde"] }
kodegen_simd = { version = "0.1" }
cylo = { version = "0.1" }
ctrlc = { version = "3", features = ["termination"] }

# Workspace MCP infrastructure
kodegen_mcp_tool = { version = "0.1" }
kodegen_mcp_schema = { version = "0.1" }
kodegen_server_http = { version = "0.1" }
kodegen_mcp_client = { version = "0.1"  }
kodegen_tools_git = { version = "0.1" }
rmcp = { version = "0.8", features = ["client", "schemars", "server", "transport-child-process", "transport-io", "transport-sse-client", "transport-sse-client-reqwest", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }

# Keep simd-json for potential other performance needs (not for MCP types)
simd-json = { version = "0.17", default-features = false, features = ["known-key", "runtime-detection", "swar-number-parsing", "value-no-dup-keys"] }
value-trait = "0.12"
shell-words = "1"
cyrup_sugars = { version = "0.5", package = "cyrup_sugars", features = ["all"] }
hf-hub = { version = "0.4", optional = true, default-features = false, features = ["tokio", "ureq", "native-tls"] }

# For finding home directory
dirs = "6"

# Extension integration dependencies (STUBFIX_25)
quick-xml = { version = "0.38", features = ["serialize"] }
plist = "1"

# SurrealDB and its features
surrealdb = { version = "3.0.0-alpha.11", features = ["kv-surrealkv"] }
surrealdb_types = { package = "surrealdb-types", version = "3.0.0-alpha.11" }

# Async runtime (from memory package)
futures = { version = "0.3" }
async-channel = { version = "2" }

# Error handling (from memory package)
anyhow = { version = "1" }

# Tracing and observability
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File watching for realtime context updates
notify = "8"

# Memory utilities (from memory package)
memchr = { version = "2" }

# MIME type detection
mime_guess = "2"

# Cognitive system dependencies (from memory package)
ndarray = { version = "0.16" }
nalgebra = { version = "0.34", features = ["serde-serialize"] }
petgraph = { version = "0.8" }
ordered-float = { version = "5" }

# Crypto/hashing (from memory package)
sha2 = { version = "0.11.0-rc.2" }

# File system (from memory package)
walkdir = { version = "2" }


# Complex numbers (from memory package)
num-complex = { version = "0.4" }

# Vector store implementations (from memory package)
faiss = { version = "0.12", optional = true }
hnsw = { version = "0.11", optional = true }
instant-distance = { version = "0.6" }

# HTTP API (from memory package)
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }

# Additional utilities (from memory package)
atomic = "0.6"
jsonwebtoken = "9"
csv = "1"
prometheus = { version = "0.14" }


# — DSP / NN (base dependencies - no acceleration features) —
candle-core = { version = "0.9.2-alpha.1", default-features = false }
candle-nn = { version = "0.9.2-alpha.1", default-features = false }
candle-transformers = { version = "0.9.2-alpha.1", default-features = false }
tokenizers = "0.22"

# — Optional acceleration dependencies —
half = { version = "2", optional = true }
metal = { version = "0.32", optional = true }
candle-metal-kernels = { version = "0.9.2-alpha.1", optional = true }
cudarc = { version = "0.17", optional = true, default-features = false, features = [
    "cublas",
    "cublaslt",
    "cudnn",
    "curand",
    "dynamic-linking",
    "f16",
    "std",
] }
bindgen_cuda = { version = "0.1", optional = true }
candle-kernels = { version = "0.9.2-alpha.1", optional = true }

# — audio / resampling —
hound = "3"
symphonia = { version = "0.5", features = ["all"], optional = true }

# Core dependencies
serde = { version = "1", features = ["derive"] }
schemars = { version = "1", features = ["derive"] }
jsonschema = "0.33"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
cyrup_termcolor = "2"
hashbrown = { version = "0.16", features = ["serde"] }
glob = "0.3"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# CLI dependencies for interactive prompts
inquire = { version = "0.9", features = ["fuzzy"] }
fuzzy-matcher = "0.3"

# Content sanitization dependencies (TASK404)
unicode-normalization = "0.1"  # Unicode NFC normalization for security
html-escape = "0.2"               # HTML entity escaping for XSS prevention

# Content formatting (STUB_1)
pulldown-cmark = "0.13"
syntect = "5"

# --- Web dependencies ---
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
jwalk = "0.8"
flume = "0.11"
rayon = { version = "1", optional = true }
gix = "0.74"
# Explicit dependencies to fix Docker build transitive dependency resolution
gix-lock = "19"
gix-tempfile = "19"
gix-utils = "0.3"
memmap2 = "0.9"
ignore = "0.4"
ahash = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# Ultra-high-performance dependencies for zero-allocation operations
arrayvec = { version = "0.7", features = ["serde"] }
smallvec = { version = "2.0.0-alpha.11", features = ["serde"] }

# System information for memory queries
sysinfo = "0.37"
crossbeam-skiplist = "0.1"  # Used for SkipMap - different purpose

wide = "0.8"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
lazy_static = "1"
ropey = "2.0.0-beta.1"
atomic-counter = "1"
arc-swap = "1"
once_cell = "1"
regex = "1"
minijinja = "2"
parking_lot = "0.12"
dashmap = "6"
strsim = "0.11"
lz4 = "1"

# LRU cache for operation history tracking
moka = { version = "0.12", features = ["sync"] }

# Additional dependencies for memory migration
fastrand = "2"
rand = "0.9"
rand_pcg = "0.9"
num_cpus = "1"
bytes = "1"
toml = "0.9"
rkyv = { version = "0.8", optional = true }
bincode = { version = "2" }

# Note: SurrealDB already defined above, removing duplicate
serde_cbor = "0.11"

md5 = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
rustls = { version = "0.23", features = ["aws-lc-rs"], default-features = false }
async-stream = "0.3"
clap = { version = "4", features = ["derive"] }

# HuggingFace Hub download dependencies
reqwest = { version = "0.12", features = ["json", "rustls-tls"], optional = true, default-features = false }
globset = { version = "0.4", optional = true }

[dev-dependencies]
# Testing (from memory package)
mockall = { version = "0.13" }
mockito = { version = "1" }
assert_approx_eq = { version = "1" }
criterion = { version = "0.7" }
tempfile = { version = "3" }
env_logger = "0.11"
jemalloc-sys = "0.5"
quanta = "0.12"
weak-table = "0.3"
fnv = "1"
hdrhistogram = "7"


[[bin]]
name = "kodegen-candle-agent"
path = "src/main.rs"

[lib]
name = "kodegen_candle_agent"
path = "src/lib.rs"

[[example]]
name = "candle_agent_demo"
path = "examples/candle_agent_demo.rs"

[features]
default = ["reqwest_unstable", "cognitive", "api", "download-hf-hub"]

# --- Core build flavours ---
desktop = ["dep:rayon"]
web = ["dep:wasm-bindgen", "dep:js-sys", "web-sys/Window", "dep:console_error_panic_hook"]

# --- Developer conveniences ---
dev = ["debug", "desktop"]
debug = []

# --- SIMD features ---
portable_simd = []
reqwest_unstable = []

# --- Memory package features (migrated) ---
api = ["dep:axum", "dep:tower", "dep:tower-http"]
faiss-vector = ["dep:faiss"]
hnsw-vector = ["dep:hnsw"]
surreal-vector = []
custom-embeddings = []
cognitive = []
quantum-routing = ["cognitive"]
evolution = ["cognitive"]
full-cognitive = ["cognitive", "quantum-routing", "evolution"]

# --- Download backend features (can be used together, hf-hub is default) ---
download-hf-hub = ["dep:hf-hub", "dep:reqwest", "dep:globset"]
# download-progresshub = ["dep:progresshub"]

# --- Candle backend features ---
cuda = [
    "dep:cudarc",
    "dep:bindgen_cuda",
    "dep:candle-kernels",
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
]
cudnn = ["cuda", "cudarc/cudnn"]
metal = [
    "dep:metal",
    "dep:candle-metal-kernels",
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
]
accelerate = [
    "dep:accelerate-src",
    "candle-core/accelerate",
    "candle-nn/accelerate",
    "candle-transformers/accelerate",
]
mkl = [
    "dep:intel-mkl-src",
    "candle-core/mkl",
    "candle-nn/mkl",
    "candle-transformers/mkl",
]

# OS-specific acceleration dependencies
[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
intel-mkl-src = { version = "0.8", optional = true }

[target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
intel-mkl-src = { version = "0.8", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
accelerate-src = { version = "0.3", optional = true }
